LU-2468 ldlm: shrinker path should not allocate memory

Found a glitch along the ldlm_shrink path,
ldlm_pool_shrink()-> ldlm_cli_pool_shrink()->
ldlm_cancel_lru(ns, nr, LDLM_ASYNC, LDLM_CANCEL_SHRINK)->
ldlm_bl_to_thread_list(ns, NULL, &cancels, nr, LDLM_ASYNC)->
ldlm_bl_to_thread(ns, NULL, cancels, nr, LDLM_ASYNC)->
OBD_ALLOC(blwi, sizeof(*blwi))

Shrinker path should not allocate memory again. While It's not the
deadlock root cause though.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I91a451303e636b94e74829a97e8c8305a95cfc9b